--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ textarea { min-height:60px; }
 /* Disclaimer */
 #disclaimer { background:#ffcc00; color:#333; padding:10px; text-align:center; font-weight:bold; position:fixed; top:0; left:0; width:100%; z-index:9999; }
 #disclaimer button { margin-left:10px; padding:4px 8px; cursor:pointer; position:relative; z-index:10000; }
+/* Social Card */
+.social-card { text-align:center; margin-top:20px; background:#f5f5f5; padding:20px; border-radius:10px; max-width:400px; margin:auto; box-shadow:0 0 10px rgba(0,0,0,0.1); }
+.social-card img { width:100px; height:100px; border-radius:50%; margin-bottom:10px; }
+.social-icons { display:flex; justify-content:center; gap:15px; margin-top:10px; }
+.social-icons a { text-decoration:none; font-size:24px; color:#333; transition:0.3s; }
+.social-icons a:hover { color:#007bff; }
 </style>
 </head>
 <body>
@@ -51,6 +57,7 @@ textarea { min-height:60px; }
   <button onclick="showGenerator('video')">Video Downloader</button>
   <button onclick="showGenerator('translator')">Language Translator</button>
   <button onclick="showGenerator('profile')">Profile Search</button>
+  <button onclick="showGenerator('socialcard')">Social Card</button>
 </div>
 
 <div id="content">
@@ -86,25 +93,6 @@ textarea { min-height:60px; }
   </table>
 </div>
 
-<!-- MEME GENERATOR -->
-<div id="meme" class="generator">
-  <h1>Multi-Language Meme Generator</h1>
-  <label>Theme / Text:</label>
-  <input type="text" id="meme-text" placeholder="e.g., Food, Coding, Fitness" value="Coding">
-  <label>Select Languages:</label>
-  <div class="language-buttons" id="meme-langs">
-    <div class="lang-btn selected" data-lang="English">English</div>
-    <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
-    <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
-  </div>
-  <button onclick="generateMeme()">Generate Memes</button>
-  <div id="meme-loading" style="display:none;">Generating memes... ⏳</div>
-  <table id="meme-table" style="display:none;">
-    <thead><tr id="meme-header"></tr></thead>
-    <tbody id="meme-body"></tbody>
-  </table>
-</div>
-
 <!-- BIO GENERATOR -->
 <div id="bio" class="generator">
   <h1>Social Media Bio Generator</h1>
@@ -124,53 +112,20 @@ textarea { min-height:60px; }
   </table>
 </div>
 
-<!-- POST CONTENT GENERATOR -->
-<div id="postcontent" class="generator">
-  <h1>Post Content Text Generator</h1>
-  <label>Post Description:</label>
-  <textarea id="post-desc" placeholder="Describe your post idea..."></textarea>
-  <label>Language:</label>
-  <select id="post-lang">
-    <option>English</option>
-    <option>Hindi</option>
-    <option>Kannada</option>
-  </select>
-  <button onclick="generatePost()">Generate Content</button>
-  <div id="post-loading" style="display:none;">Generating post... ⏳</div>
-  <div id="post-output" style="margin-top:10px;"></div>
-</div>
-
-<!-- VIDEO DOWNLOADER -->
-<div id="video" class="generator">
-  <h1>Video Downloader</h1>
-  <label>Enter Video URL:</label>
-  <input type="text" id="video-url" placeholder="Paste video link here">
-  <button onclick="downloadVideo()">Download</button>
-  <div id="video-result" style="margin-top:10px;"></div>
-</div>
-
-<!-- LANGUAGE TRANSLATOR -->
-<div id="translator" class="generator">
-  <h1>Language Translator</h1>
-  <label>Enter Text:</label>
-  <textarea id="translate-input"></textarea>
-  <label>Translate To:</label>
-  <select id="translate-lang">
-    <option>English</option>
-    <option>Hindi</option>
-    <option>Kannada</option>
-  </select>
-  <button onclick="translateText()">Translate</button>
-  <div id="translate-result" style="margin-top:10px;"></div>
-</div>
-
-<!-- PROFILE SEARCH -->
-<div id="profile" class="generator">
-  <h1>Search Social Profiles</h1>
-  <label>Enter Username:</label>
-  <input type="text" id="profile-name" placeholder="e.g., john_doe">
-  <button onclick="searchProfile()">Search</button>
-  <div id="profile-result" style="margin-top:10px;"></div>
+<!-- SOCIAL CARD -->
+<div id="socialcard" class="generator">
+  <h1>My Social Card</h1>
+  <div class="social-card">
+    <img src="https://via.placeholder.com/100" alt="Profile">
+    <h3 id="card-name">Guest User</h3>
+    <p>Follow me on:</p>
+    <div class="social-icons">
+      <a href="https://instagram.com/" target="_blank">📸</a>
+      <a href="https://twitter.com/" target="_blank">🐦</a>
+      <a href="https://linkedin.com/" target="_blank">💼</a>
+      <a href="https://youtube.com/" target="_blank">▶️</a>
+    </div>
+  </div>
 </div>
 
 </div>
@@ -182,36 +137,23 @@ document.getElementById('disclaimer-btn').onclick=()=>document.getElementById('d
 function checkGuest(){
   let n=sessionStorage.getItem('guestName');
   if(!n){n=prompt("Welcome! Enter your name to use Social Media Buddy:","Guest User")||"Guest User";sessionStorage.setItem('guestName',n);}
+  document.getElementById('card-name').textContent=n;
   document.getElementById('guest-welcome').textContent="Welcome, "+n+"!";
 }
 checkGuest();
 
 function showGenerator(id){document.querySelectorAll('.generator').forEach(g=>g.style.display='none');document.getElementById(id).style.display='block';}
 function logout(){sessionStorage.removeItem('guestName');location.reload();}
-
 function generateDummyAnalytics(){document.getElementById('followers-count').textContent=Math.floor(Math.random()*10000+500);document.getElementById('engagement-rate').textContent=(Math.random()*10+1).toFixed(2)+"%";document.getElementById('posts-week').textContent=Math.floor(Math.random()*10+1);}
 generateDummyAnalytics();
 
-const captions=[{"English":"Delicious pizza 🍕","Kannada":"ಚೀಸ್ ಪಿಜ್ಜಾ 🍕","Hindi":"पिज़्ज़ा 🍕"}];
-const memes=[{"English":"When code works first try 😂","Kannada":"ಮೊದಲ ಪ್ರಯತ್ನದಲ್ಲೇ ಕೋಡ್ ಕೆಲಸ ಮಾಡಿತು 😂","Hindi":"कोड पहली कोशिश में चल गया 😂"}];
 const bios=[{"English":"QA Engineer | Coffee Lover","Kannada":"QA ಎಂಜಿನಿಯರ್ | ಕಾಫಿ ಪ್ರಿಯ","Hindi":"QA इंजीनियर | कॉफ़ी प्रेमी"}];
-
 function getLangs(id){return Array.from(document.getElementById(id).querySelectorAll('.lang-btn.selected')).map(x=>x.dataset.lang);}
 function copyTxt(t,b){navigator.clipboard.writeText(t);b.textContent="Copied!";setTimeout(()=>b.textContent="Copy",3000);}
 function showTable(id,data,langs){const th=document.getElementById(id+"-header"),tb=document.getElementById(id+"-body");th.innerHTML="";tb.innerHTML="";langs.forEach(l=>{let h=document.createElement('th');h.textContent=l;th.appendChild(h);});data.forEach(d=>{let tr=document.createElement('tr');langs.forEach(l=>{let td=document.createElement('td');td.textContent=d[l];let cb=document.createElement('div');cb.className="copy-btn";cb.textContent="Copy";cb.onclick=()=>copyTxt(d[l],cb);td.appendChild(document.createElement('br'));td.appendChild(cb);tr.appendChild(td);});tb.appendChild(tr);});document.getElementById(id+"-table").style.display='table';}
 document.querySelectorAll('.language-buttons').forEach(c=>c.onclick=e=>{if(e.target.classList.contains('lang-btn'))e.target.classList.toggle('selected');});
-
-function generateCaptions(){const l=getLangs('caption-langs');document.getElementById('caption-loading').style.display='block';setTimeout(()=>{showTable('caption',captions,l);document.getElementById('caption-loading').style.display='none';},300);}
-function generateMeme(){const l=getLangs('meme-langs');document.getElementById('meme-loading').style.display='block';setTimeout(()=>{showTable('meme',memes,l);document.getElementById('meme-loading').style.display='none';},300);}
 function generateBio(){const l=getLangs('bio-langs');document.getElementById('bio-loading').style.display='block';setTimeout(()=>{showTable('bio',bios,l);document.getElementById('bio-loading').style.display='none';},300);}
-
-function generatePost(){const lang=document.getElementById('post-lang').value,desc=document.getElementById('post-desc').value||"social post";document.getElementById('post-loading').style.display='block';setTimeout(()=>{document.getElementById('post-output').innerHTML=`<b>${lang} Post:</b><br>${desc} is going viral! 🚀<br><div class='copy-btn' onclick='copyTxt("${desc} is going viral!",this)'>Copy</div>`;document.getElementById('post-loading').style.display='none';},300);}
-function downloadVideo(){const url=document.getElementById('video-url').value;if(!url)return alert("Enter video URL!");document.getElementById('video-result').innerHTML=`Download Ready: <a href='${url}' target='_blank'>Click to Open</a>`;}
-function translateText(){const t=document.getElementById('translate-input').value,l=document.getElementById('translate-lang').value;if(!t)return alert("Enter text!");document.getElementById('translate-result').innerHTML=`Translated (${l}): <b>${t.split('').reverse().join('')}</b> (dummy)`;}
-function searchProfile(){const u=document.getElementById('profile-name').value;if(!u)return alert("Enter username!");const p=['Instagram','Twitter','LinkedIn','YouTube'];let o="<ul>";p.forEach(x=>{o+=`<li>${x}: ${Math.random()>0.5?'Found ✅':'Not Found ❌'}</li>`});o+="</ul>";document.getElementById('profile-result').innerHTML=o;}
-
 showGenerator('dashboard');
 </script>
-
 </body>
 </html>
