--- a/index.html
+++ b/index.html
@@ -4,41 +4,91 @@
 <meta charset="UTF-8">
 <title>Social Media Buddy</title>
 <style>
-body {margin:0;font-family:Arial;}
-#sidebar {position:fixed;left:0;top:0;width:200px;height:100%;background:#333;color:white;display:flex;flex-direction:column;z-index:2;transition:0.3s;}
-#sidebar.hide{left:-200px;}
-#sidebar h2{text-align:center;padding:10px;}
-#sidebar button{background:none;border:none;color:white;text-align:left;padding:10px;cursor:pointer;font-size:16px;}
-#sidebar button:hover{background:#444;}
-#content{margin-left:200px;padding:20px;transition:0.3s;}
-#sidebar.hide + #content{margin-left:0;}
-#hamburger{position:fixed;top:10px;left:10px;font-size:26px;color:green;cursor:pointer;z-index:3;}
-h1{text-align:center;}
-label{font-weight:bold;display:block;margin-top:10px;}
-input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
-.language-buttons{display:flex;flex-wrap:wrap;}
-.lang-btn{border:1px solid #ccc;border-radius:5px;padding:6px 12px;margin:3px;cursor:pointer;}
-.lang-btn.selected{background:#007bff;color:white;border-color:#007bff;}
-.generator{display:none;}
-.copy-btn{display:inline-block;background:#007bff;color:white;padding:3px 6px;border-radius:4px;cursor:pointer;margin-top:4px;font-size:12px;}
-.copy-btn:hover{background:#0056b3;}
-#disclaimer{background:#ffcc00;color:#333;padding:10px;text-align:center;position:fixed;top:0;left:0;width:100%;font-weight:bold;z-index:9999;}
-#disclaimer button{margin-left:10px;padding:4px 10px;cursor:pointer;}
-.social-card{text-align:center;margin:auto;margin-top:30px;max-width:400px;background:#f5f5f5;padding:20px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,0.1);}
-.social-card img{width:100px;height:100px;border-radius:50%;}
-.social-icons{display:flex;justify-content:center;gap:15px;margin-top:10px;}
-.social-icons a{text-decoration:none;font-size:22px;color:#333;}
-.social-icons a:hover{color:#007bff;}
-.trending-container{margin-top:20px;background:#f7f7f7;padding:10px;border-radius:8px;box-shadow:0 0 5px rgba(0,0,0,0.1);}
-.trending-header{display:flex;justify-content:space-between;align-items:center;}
-.trending-header h3{margin:0;}
-.refresh-btn{background:#007bff;color:white;border:none;border-radius:5px;padding:5px 10px;cursor:pointer;font-size:14px;}
-.refresh-btn:hover{background:#0056b3;}
-.trending-post{border-bottom:1px solid #ddd;padding:8px 0;}
-.trending-post:last-child{border:none;}
-.trending-post h4{margin:0;font-size:16px;color:#333;}
-.trending-post p{margin:4px 0;font-size:14px;}
-.trending-platform{font-size:12px;color:#555;}
+/* ---------- Body & Global ---------- */
+body {
+  margin:0;
+  font-family:'Arial', sans-serif;
+  background:#f9f9f9;
+  color:#333;
+}
+h1 {font-size:20px; margin:0 0 10px 0;}
+label {font-weight:bold; display:block; margin-top:10px;}
+input, textarea, select, button {width:100%; padding:8px; margin-top:5px; font-size:16px; border-radius:12px; border:1px solid #ddd; box-sizing:border-box;}
+
+/* ---------- Disclaimer ---------- */
+#disclaimer {
+  background:#fffc00; color:#000; padding:12px 10px; text-align:center; font-weight:bold; position:fixed; top:0; left:0; width:100%; z-index:9999; border-bottom:1px solid #ddd;
+}
+#disclaimer button {
+  margin-left:10px; padding:5px 12px; border-radius:20px; background:#333; color:#fff; border:none; cursor:pointer;
+}
+
+/* ---------- Hamburger ---------- */
+#hamburger {
+  position:fixed; top:12px; left:12px; font-size:26px; color:#fffc00; cursor:pointer; z-index:1000;
+}
+
+/* ---------- Sidebar ---------- */
+#sidebar {
+  position:fixed; left:0; top:0; width:60px; height:100%; background:#fff; border-right:1px solid #ddd; display:flex; flex-direction:column; align-items:center; padding-top:20px; transition:0.3s; z-index:999;
+}
+#sidebar.hide {left:-60px;}
+#sidebar button {
+  background:none; border:none; margin:15px 0; cursor:pointer; font-size:24px; color:#333; display:flex; flex-direction:column; align-items:center;
+}
+#sidebar button span {font-size:12px; margin-top:4px;}
+#sidebar button:hover {color:#fffc00;}
+
+/* ---------- Content ---------- */
+#content {
+  margin-left:60px; padding:10px; transition:0.3s;
+}
+#sidebar.hide + #content {margin-left:0;}
+
+/* ---------- Generator Cards ---------- */
+.generator {
+  display:none;
+  background:#fff;
+  border-radius:20px;
+  padding:15px;
+  margin-bottom:15px;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+  position:relative;
+}
+
+/* ---------- Buttons ---------- */
+button {
+  background:#fffc00; color:#000; border:none; border-radius:50px; padding:10px 20px; font-weight:bold; cursor:pointer; margin-top:10px;
+}
+button:hover {background:#ffe600;}
+
+/* ---------- Copy Button ---------- */
+.copy-btn {
+  position:absolute; bottom:10px; right:10px; background:#fffc00; color:#000; padding:5px 10px; border-radius:20px; font-size:12px; cursor:pointer;
+}
+.copy-btn:hover {background:#ffe600;}
+
+/* ---------- Language Buttons ---------- */
+.language-buttons{display:flex; flex-wrap:wrap; margin-top:5px;}
+.lang-btn{border:1px solid #ddd; border-radius:20px; padding:6px 12px; margin:3px; cursor:pointer;}
+.lang-btn.selected{background:#fffc00; color:#000; border-color:#fffc00;}
+
+/* ---------- Social Card ---------- */
+.social-card{text-align:center; margin:auto; max-width:400px; background:#fff; padding:20px; border-radius:20px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+.social-card img{width:100px; height:100px; border-radius:50%;}
+.social-icons{display:flex; justify-content:center; gap:15px; margin-top:10px;}
+.social-icons a{text-decoration:none; font-size:22px; color:#333;}
+.social-icons a:hover{color:#fffc00;}
+
+/* ---------- Trending Feed ---------- */
+.trending-container{margin-top:20px; max-height:300px; overflow-y:auto;}
+.trending-header{display:flex; justify-content:space-between; align-items:center;}
+.refresh-btn{background:#fffc00; color:#000; border:none; border-radius:20px; padding:5px 10px; cursor:pointer; font-size:14px;}
+.refresh-btn:hover{background:#ffe600;}
+.trending-post{background:#fff8e1; border-radius:15px; padding:10px; margin-bottom:10px; box-shadow:0 2px 5px rgba(0,0,0,0.08);}
+.trending-post h4{margin:0; font-size:16px; color:#333;}
+.trending-post p{margin:4px 0; font-size:14px;}
+.trending-platform{font-size:12px; color:#555;}
 </style>
 </head>
 <body>
@@ -53,16 +103,15 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 
 <!-- Sidebar -->
 <div id="sidebar">
-  <h2>Social Media Buddy</h2>
-  <button onclick="showSection('dashboard')">Dashboard</button>
-  <button onclick="showSection('caption')">Caption Generator</button>
-  <button onclick="showSection('meme')">Meme Generator</button>
-  <button onclick="showSection('bio')">Bio Generator</button>
-  <button onclick="showSection('post')">Post Content Generator</button>
-  <button onclick="showSection('video')">Video Downloader</button>
-  <button onclick="showSection('translate')">Language Translator</button>
-  <button onclick="showSection('profile')">Profile Search</button>
-  <button onclick="showSection('card')">Social Card</button>
+  <button onclick="showSection('dashboard')">🏠<span>Dashboard</span></button>
+  <button onclick="showSection('caption')">💬<span>Caption</span></button>
+  <button onclick="showSection('meme')">😂<span>Meme</span></button>
+  <button onclick="showSection('bio')">📝<span>Bio</span></button>
+  <button onclick="showSection('post')">📌<span>Post</span></button>
+  <button onclick="showSection('video')">🎥<span>Video</span></button>
+  <button onclick="showSection('translate')">🌐<span>Translate</span></button>
+  <button onclick="showSection('profile')">🔍<span>Profile</span></button>
+  <button onclick="showSection('card')">📇<span>Card</span></button>
 </div>
 
 <!-- Main Content -->
@@ -78,7 +127,7 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
   <p><b>Engagement Rate:</b> <span id="engagement">0%</span></p>
   <p><b>Posts This Week:</b> <span id="posts">0</span></p>
 
-  <!-- 🔥 What's Trending Section -->
+  <!-- Trending Section -->
   <div class="trending-container">
     <div class="trending-header">
       <h3>🔥 What's Trending</h3>
@@ -182,8 +231,8 @@ input,textarea,button{width:100%;padding:8px;margin-top:5px;font-size:16px;}
 
 <script>
 // Sidebar toggle
-document.getElementById('hamburger').onclick=()=>document.getElementById('sidebar').classList.toggle('hide');
-document.getElementById('disclaimer-btn').onclick=()=>document.getElementById('disclaimer').style.display='none';
+document.getElementById('hamburger').onclick = () => document.getElementById('sidebar').classList.toggle('hide');
+document.getElementById('disclaimer-btn').onclick = () => document.getElementById('disclaimer').style.display='none';
 
 // Guest Login
 function initGuest(){
@@ -195,7 +244,7 @@ function initGuest(){
 }
 initGuest();
 
-function logout(){sessionStorage.removeItem('guestName');location.reload();}
+function logout(){sessionStorage.removeItem('guestName'); location.reload();}
 
 // Show Section
 function showSection(id){
